--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
         "date-fns": "^3.0.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-rate-limit": "^8.2.1",
         "ioredis": "^5.3.2",
         "json2csv": "^6.0.0-alpha.2",
         "multer": "^1.4.5-lts.1",
