feat: Implement the AI analysis feature with Gemini LLM integration, new frontend pages, backend services, and comprehensive documentation.

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,8 @@ FRONTEND_URL=http://localhost:5173
 MAX_CONCURRENCY=5
 TEST_TIMEOUT_MS=30000
 RETRY_ATTEMPTS=2
+
+# Vertex AI Configuration (uses Google Cloud credentials above)
+# Model options: gemini-1.5-flash-001, gemini-1.5-pro-001, gemini-2.0-flash-001
+GEMINI_MODEL=gemini-1.5-flash-001
+GEMINI_LOCATION=us-central1
