feat: Add Responsible AI security improvements - Clean .env.example of hardcoded credentials - Add security headers (X-Frame-Options, X-Content-Type-Options, etc.) - Add PRIVACY.md documentation for data handling transparency

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,70 @@
-# Google Cloud Configuration
-GOOGLE_CLOUD_PROJECT_ID=gen-ai-guru-gdg-pune
-GOOGLE_APPLICATION_CREDENTIALS=./gen-ai-guru-gdg-pune-62307adaa3cf.json
+# ============================================
+# CES TestSuiteAgent Environment Configuration
+# ============================================
+# Copy this file to .env and fill in your own values.
+# ⚠️ NEVER commit .env with real credentials!
 
-# Dialogflow CX Agent Configuration
+# --------------------------------------------
+# Google Cloud Configuration (REQUIRED)
+# --------------------------------------------
+# Your GCP project ID where Dialogflow CX agent is deployed
+GOOGLE_CLOUD_PROJECT_ID=your-gcp-project-id
+
+# Path to your service account JSON key file
+# Download from: GCP Console > IAM > Service Accounts > Keys
+GOOGLE_APPLICATION_CREDENTIALS=./your-service-account-key.json
+
+# --------------------------------------------
+# Dialogflow CX Agent Configuration (REQUIRED)
+# --------------------------------------------
+# Agent location (e.g., global, us-central1, europe-west1)
 DIALOGFLOW_LOCATION=global
-DIALOGFLOW_AGENT_ID=ffff32e4-24a6-44de-9450-2475f80cc583
 
-# Backend Server
+# Your Dialogflow CX Agent ID (UUID format)
+# Find in: Dialogflow CX Console > Agent Settings
+DIALOGFLOW_AGENT_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+
+# --------------------------------------------
+# Gemini AI Configuration (REQUIRED for AI Analysis)
+# --------------------------------------------
+# Get your API key from: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=your-gemini-api-key-here
+
+# Model options: gemini-1.5-flash, gemini-1.5-pro, gemini-2.0-flash
+GEMINI_MODEL=gemini-1.5-flash
+
+# --------------------------------------------
+# Backend Server Configuration
+# --------------------------------------------
 PORT=3001
 NODE_ENV=development
 
-# Redis Configuration (optional - for bulk test queue)
+# --------------------------------------------
+# Redis Configuration (OPTIONAL - for bulk test queue)
+# --------------------------------------------
 REDIS_HOST=localhost
 REDIS_PORT=6379
 
-# Database (SQLite for local dev)
+# --------------------------------------------
+# Database Configuration
+# --------------------------------------------
+# SQLite database path for local development
 DATABASE_URL=./data/database.sqlite
 
-# Frontend URL (for CORS)
+# --------------------------------------------
+# Frontend Configuration
+# --------------------------------------------
+# Frontend URL for CORS (update for production)
 FRONTEND_URL=http://localhost:5173
 
+# --------------------------------------------
 # Test Execution Settings
+# --------------------------------------------
+# Maximum concurrent test executions
 MAX_CONCURRENCY=5
-TEST_TIMEOUT_MS=30000
-RETRY_ATTEMPTS=2
 
-# Vertex AI Configuration (uses Google Cloud credentials above)
-# Model options: gemini-1.5-flash-001, gemini-1.5-pro-001, gemini-2.0-flash-001
-GEMINI_MODEL=gemini-1.5-flash-001
-GEMINI_LOCATION=us-central1
+# Timeout for individual tests (milliseconds)
+TEST_TIMEOUT_MS=30000
+
+# Number of retry attempts for failed tests
+RETRY_ATTEMPTS=2
