--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
         "@google-cloud/dialogflow-cx": "^4.10.0",
         "@google-cloud/vertexai": "^1.10.0",
         "@google/generative-ai": "^0.24.1",
+        "axios": "^1.13.4",
         "better-sqlite3": "^12.5.0",
         "bull": "^4.12.0",
         "cors": "^2.8.5",
